@@ -13,7 +13,7 @@ user interface) for R, based on the tcltk package.
 \tabular{ll}{
 Package: \tab Rcmdr\cr
 Version: \tab 2.0-0\cr
-Date: \tab 2013/04/20\cr
+Date: \tab 2013/04/21\cr
 Depends: \tab R (>= 2.15.0), grDevices, utils, car (>= 2.0-15)\cr
 Imports: \tab tcltk\cr
 Suggests: \tab abind, aplpack, colorspace, effects (>= 1.0-7), e1071, foreign, grid, 
